TODO:add lead & fix lead images overflow & add h1-h6 first letter uppercase

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -17,6 +17,14 @@ h4,
 h5,
 h6 {
   font-weight: 700;
+}
+
+h1::first-letter,
+h2::first-letter,
+h3::first-letter,
+h4::first-letter,
+h5::first-letter,
+h6::first-letter {
   text-transform: uppercase;
 }
 
